# solana-lints

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
crate/: Cargo.toml
crate/diffs/: arbitrary_cpi.diff  bump_seed_canonicalization.diff  insecure_account_close.diff  missing_owner_check.diff  missing_signer_check.diff  type_cosplay.diff
crate/src/: lib.rs  paths.rs  utils.rs
crate/tests/: diff.rs  lints.rs  meta.rs
lints/arbitrary_cpi/: Cargo.toml  README.md
lints/arbitrary_cpi/src/: lib.rs  paths.rs
lints/arbitrary_cpi/ui/insecure/: Cargo.toml
lints/arbitrary_cpi/ui/insecure-2/: Cargo.toml
lints/arbitrary_cpi/ui/insecure-2/src/: lib.rs  lib.stderr
lints/arbitrary_cpi/ui/insecure/src/: lib.rs
lints/arbitrary_cpi/ui/insecure_2/: Cargo.toml
lints/arbitrary_cpi/ui/insecure_2/src/: lib.rs
lints/arbitrary_cpi/ui/recommended/: Cargo.toml
lints/arbitrary_cpi/ui/recommended/src/: lib.rs
lints/arbitrary_cpi/ui/secure/: Cargo.toml
lints/arbitrary_cpi/ui/secure/src/: lib.rs
lints/bump_seed_canonicalization/: Cargo.toml  README.md
lints/bump_seed_canonicalization/src/: lib.rs  paths.rs
lints/bump_seed_canonicalization/ui/insecure/: Cargo.toml
lints/bump_seed_canonicalization/ui/insecure-2/: Cargo.toml
lints/bump_seed_canonicalization/ui/insecure-2/src/: lib.rs  lib.stderr
lints/bump_seed_canonicalization/ui/insecure-3/: Cargo.toml
lints/bump_seed_canonicalization/ui/insecure-3/src/: lib.rs  lib.stderr
lints/bump_seed_canonicalization/ui/insecure/src/: lib.rs  lib.stderr
lints/bump_seed_canonicalization/ui/recommended/: Cargo.toml
lints/bump_seed_canonicalization/ui/recommended/src/: lib.rs
lints/bump_seed_canonicalization/ui/secure/: Cargo.toml
lints/bump_seed_canonicalization/ui/secure/src/: lib.rs
lints/dup_mutable_accounts_2/: Cargo.toml
lints/dup_mutable_accounts_2/src/: lib.rs
lints/dup_mutable_accounts_2/ui/insecure/: Cargo.toml
lints/dup_mutable_accounts_2/ui/insecure/src/: lib.stderr
lints/dup_mutable_accounts_2/ui/secure/src/: lib.rs
lints/duplicate-mutable-accounts/: Cargo.toml  README.md
lints/duplicate-mutable-accounts/src/: alternate_constraint.rs  anchor_constraint.rs  lib.rs
lints/duplicate-mutable-accounts/ui/insecure-2/: Cargo.toml
lints/duplicate-mutable-accounts/ui/insecure-2/src/: lib.rs  lib.stderr
lints/duplicate-mutable-accounts/ui/insecure/src/: lib.stderr
lints/duplicate-mutable-accounts/ui/recommended-2/: Cargo.toml
lints/duplicate-mutable-accounts/ui/recommended-2/src/: lib.rs
lints/duplicate-mutable-accounts/ui/secure/: Cargo.toml
lints/duplicate-mutable-accounts/ui/secure/src/: lib.rs
lints/initialization/: Cargo.toml
lints/initialization/src/: lib.rs
lints/initialization/ui/recommended/: Cargo.toml
lints/initialization/ui/recommended/src/: init_expansion.rs  lib.rs
lints/initialization/ui/secure/: Cargo.toml
lints/initialization/ui/secure/src/: lib.rs
lints/insecure_account_close/: Cargo.toml  README.md
lints/insecure_account_close/src/: insecure_account_close.rs  lib.rs
lints/insecure_account_close/ui/insecure/: Cargo.toml
lints/insecure_account_close/ui/insecure-still/: Cargo.toml
lints/insecure_account_close/ui/insecure-still-still/: Cargo.toml
lints/insecure_account_close/ui/insecure-still-still/src/: lib.rs
lints/insecure_account_close/ui/insecure-still/src/: lib.rs
lints/insecure_account_close/ui/insecure/src/: lib.rs  lib.stderr
lints/insecure_account_close/ui/recommended/: Cargo.toml
lints/insecure_account_close/ui/recommended/src/: lib.rs
lints/insecure_account_close/ui/secure/: Cargo.toml
lints/insecure_account_close/ui/secure/src/: lib.rs
lints/invalid_account_data/: Cargo.toml
lints/invalid_account_data/src/: lib.rs
lints/invalid_account_data/ui/fixed-secure/: Cargo.toml
lints/invalid_account_data/ui/fixed-secure/src/: lib.rs
lints/invalid_account_data/ui/insecure/: Cargo.toml
lints/invalid_account_data/ui/insecure/src/: lib.stderr
lints/invalid_account_data/ui/recommended/src/: lib.rs
lints/missing_owner_check/: Cargo.toml  README.md
lints/missing_owner_check/src/: lib.rs
lints/missing_owner_check/ui/fixed-secure/: Cargo.toml
lints/missing_owner_check/ui/insecure/: Cargo.toml
lints/missing_owner_check/ui/recommended/: Cargo.toml
lints/missing_owner_check/ui/secure/: Cargo.toml
lints/missing_owner_check/ui/secure-account-owner/: Cargo.toml
lints/missing_owner_check/ui/secure-anchor-constraints/: Cargo.toml
lints/missing_owner_check/ui/secure-fixed/: Cargo.toml
lints/missing_owner_check/ui/secure-program-id/: Cargo.toml
lints/missing_signer_check/: Cargo.toml  README.md  rust-toolchain
lints/missing_signer_check/src/: lib.rs  missing_signer_check.rs
lints/missing_signer_check/ui/insecure/: Cargo.toml
lints/missing_signer_check/ui/insecure-non-anchor/: Cargo.toml
lints/missing_signer_check/ui/recommended/: Cargo.toml
lints/missing_signer_check/ui/secure/: Cargo.toml
lints/missing_signer_check/ui/secure-non-anchor/: Cargo.toml
lints/sysvar_address_check/: Cargo.toml  README.md
lints/sysvar_address_check/src/: lib.rs  paths.rs
lints/sysvar_address_check/ui/insecure-2/: Cargo.toml
lints/sysvar_address_check/ui/insecure-anchor/: Cargo.toml
lints/sysvar_address_check/ui/secure-2/: Cargo.toml
lints/sysvar_get/: Cargo.toml  README.md
lints/sysvar_get/src/: lib.rs
lints/sysvar_get/ui/insecure/: Cargo.toml
lints/sysvar_get/ui/secure/: Cargo.toml
lints/type_cosplay/: Cargo.toml  NOTES.md  README.md  notes.md
lints/type_cosplay/src/: lib.rs
lints/type_cosplay/ui/insecure/: Cargo.toml
lints/type_cosplay/ui/insecure-2/: Cargo.toml
lints/type_cosplay/ui/insecure-3/: Cargo.toml
lints/type_cosplay/ui/insecure-anchor/: Cargo.toml
lints/type_cosplay/ui/insecure-three/: Cargo.toml
lints/type_cosplay/ui/insecure-two/: Cargo.toml
lints/type_cosplay/ui/recommended/: Cargo.toml
lints/type_cosplay/ui/recommended-2/: Cargo.toml
lints/type_cosplay/ui/secure/: Cargo.toml
lints/type_cosplay/ui/secure-2/: Cargo.toml
lints/type_cosplay/ui/types/: Cargo.toml  lib.rs
(+80 files in other folders)
