[package]
name = "solana-lints"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-syn = "0.29.0"
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "ac4c2094a6030530661bee3876e0228ddfeb6b8b" }
if_chain = "1.0"
syn = { version = "1.0.109", features = ["parsing"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
similar-asserts = "1.5"
tempfile = "3.13"
toml = "0.8"

[package.metadata.rust-analyzer]
rustc_private = true
