[package]
name = "solana-lints"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-syn = "0.30.1"
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "19e305bb57a7595f2a8d81f521c0dd8bf854e739" }
if_chain = "1.0"
syn = { version = "1.0.109", features = ["parsing"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
similar-asserts = "1.6"
tempfile = "3.16"
toml = "0.8"

[package.metadata.rust-analyzer]
rustc_private = true
