[package]
name = "arbitrary_cpi"
version = "0.1.0"
authors = ["Andrew Haberlandt (andrew.haberlandt@trailofbits.com)"]
description = "lint for [5-arbitrary-cpi](https://github.com/coral-xyz/sealevel-attacks/tree/master/programs/5-arbitrary-cpi)"
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[[example]]
name = "insecure"
path = "ui/insecure/src/lib.rs"

[[example]]
name = "insecure-2"
path = "ui/insecure-2/src/lib.rs"

[[example]]
name = "recommended"
path = "ui/recommended/src/lib.rs"

[[example]]
name = "secure"
path = "ui/secure/src/lib.rs"

[dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "f4850f7292efa33759b4f7f9b7621268979e9914" }
dylint_linting = "2.6.1"
if_chain = "1.0.2"
solana-lints = { path = "../../crate" }

[dev-dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
dylint_testing = "2.6.1"

[workspace]

[package.metadata.rust-analyzer]
rustc_private = true
