[package]
name = "bump_seed_canonicalization"
version = "0.1.0"
authors = ["Andrew Haberlandt (andrew.haberlandt@trailofbits.com)"]
description = "lint for [6-bump-seed-canonicalization](https://github.com/coral-xyz/sealevel-attacks/tree/master/programs/7-bump-seed-canonicalization)"
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[[example]]
name = "insecure"
path = "ui/insecure/src/lib.rs"

[[example]]
name = "recommended"
path = "ui/recommended/src/lib.rs"

[[example]]
name = "secure"
path = "ui/secure/src/lib.rs"

[[example]]
name = "insecure-2"
path = "ui/insecure-2/src/lib.rs"

[[example]]
name = "insecure-3"
path = "ui/insecure-3/src/lib.rs"

[dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "ac4c2094a6030530661bee3876e0228ddfeb6b8b" }
dylint_linting = "2.6"
if_chain = "1.0"
solana-lints = { path = "../../crate" }

[dev-dependencies]
anchor-lang = "0.29"
dylint_testing = "2.6"

[workspace]

[package.metadata.rust-analyzer]
rustc_private = true

[package.metadata]
anchor_programs = false
non_anchor_programs = true
