[package]
name = "initialization"
version = "0.1.0"
authors = ["authors go here"]
description = "description goes here"
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[[example]]
name = "insecure"
path = "ui/insecure/src/lib.rs"

[[example]]
name = "recommended"
path = "ui/recommended/src/lib.rs"

[[example]]
name = "secure"
path = "ui/secure/src/lib.rs"

[dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "0cb0f7636851f9fcc57085cf80197a2ef6db098f" }
dylint_linting = "2.0.7"
if_chain = "1.0.2"

[dev-dependencies]
anchor-lang = "0.24.2"
dylint_testing = "2.0.7"

[workspace]

[package.metadata.rust-analyzer]
rustc_private = true
