[package]
name = "insecure_account_close"
version = "0.1.0"
authors = ["Samuel Moelius <samuel.moelius@trailofbits.com>"]
description = "lint for [9-closing-accounts](https://github.com/coral-xyz/sealevel-attacks/tree/master/programs/9-closing-accounts)"
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[[example]]
name = "insecure"
path = "ui/insecure/src/lib.rs"

[[example]]
name = "insecure-still"
path = "ui/insecure-still/src/lib.rs"

[[example]]
name = "insecure-still-still"
path = "ui/insecure-still-still/src/lib.rs"

[[example]]
name = "recommended"
path = "ui/recommended/src/lib.rs"

[[example]]
name = "secure"
path = "ui/secure/src/lib.rs"

[dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "19e305bb57a7595f2a8d81f521c0dd8bf854e739" }
dylint_linting = "3.4"
if_chain = "1.0"
solana-lints = { path = "../../crate" }

[dev-dependencies]
anchor-lang = "0.30"
dylint_testing = { version = "3.4", features = ["deny_warnings"] }

[workspace]

[package.metadata.rust-analyzer]
rustc_private = true
