[package]
name = "missing_owner_check"
version = "0.1.0"
authors = ["Victor Wei (victor.wei@trailofbits.com)"]
description = "lint for [2-owner-checks](https://github.com/coral-xyz/sealevel-attacks/tree/master/programs/2-owner-checks)"
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[[example]]
name = "insecure"
path = "ui/insecure/src/lib.rs"

[[example]]
name = "recommended"
path = "ui/recommended/src/lib.rs"

[[example]]
name = "secure"
path = "ui/secure/src/lib.rs"

[[example]]
name = "secure-fixed"
path = "ui/secure-fixed/src/lib.rs"

[[example]]
name = "secure-account-owner"
path = "ui/secure-account-owner/src/lib.rs"

[[example]]
name = "secure-program-id"
path = "ui/secure-program-id/src/lib.rs"

[dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "f4850f7292efa33759b4f7f9b7621268979e9914" }
dylint_linting = "2.6.1"
if_chain = "1.0.2"
solana-lints = { path = "../../crate" }

[dev-dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
dylint_testing = "2.6.1"

[workspace]

[package.metadata.rust-analyzer]
rustc_private = true
