[package]
name = "missing_owner_check"
version = "0.1.0"
authors = ["Victor Wei (victor.wei@trailofbits.com)"]
description = "lint for [2-owner-checks](https://github.com/coral-xyz/sealevel-attacks/tree/master/programs/2-owner-checks)"
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[[example]]
name = "insecure"
path = "ui/insecure/src/lib.rs"

[[example]]
name = "recommended"
path = "ui/recommended/src/lib.rs"

[[example]]
name = "secure"
path = "ui/secure/src/lib.rs"

[[example]]
name = "secure-fixed"
path = "ui/secure-fixed/src/lib.rs"

[[example]]
name = "secure-account-owner"
path = "ui/secure-account-owner/src/lib.rs"

[[example]]
name = "secure-program-id"
path = "ui/secure-program-id/src/lib.rs"

[dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "ac4c2094a6030530661bee3876e0228ddfeb6b8b" }
dylint_linting = "2.6"
if_chain = "1.0"
solana-lints = { path = "../../crate" }

[dev-dependencies]
anchor-lang = "0.29"
anchor-spl = "0.29"
dylint_testing = "2.6"

[workspace]

[package.metadata.rust-analyzer]
rustc_private = true
