[package]
name = "missing_owner_check"
version = "0.1.0"
authors = ["Victor Wei (victor.wei@trailofbits.com)"]
description = "lint for [2-owner-checks](https://github.com/coral-xyz/sealevel-attacks/tree/master/programs/2-owner-checks)"
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[[example]]
name = "insecure"
path = "ui/insecure/src/lib.rs"

[[example]]
name = "recommended"
path = "ui/recommended/src/lib.rs"

[[example]]
name = "secure"
path = "ui/secure/src/lib.rs"

[[example]]
name = "secure-fixed"
path = "ui/secure-fixed/src/lib.rs"

[[example]]
name = "secure-account-owner"
path = "ui/secure-account-owner/src/lib.rs"

[[example]]
name = "secure-program-id"
path = "ui/secure-program-id/src/lib.rs"

[[example]]
name = "secure-anchor-constraints"
path = "ui/secure-anchor-constraints/src/lib.rs"

[dependencies]
anchor-syn = "0.30.1"
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "19e305bb57a7595f2a8d81f521c0dd8bf854e739" }
dylint_linting = "3.4"
if_chain = "1.0"
solana-lints = { path = "../../crate" }
syn = { version = "2.0.98", features = ["parsing"] }

[dev-dependencies]
anchor-lang = "0.30"
anchor-spl = "0.30"
dylint_testing = { version = "3.4", features = ["deny_warnings"] }

[workspace]

[package.metadata.rust-analyzer]
rustc_private = true
