[package]
name = "missing_signer_check"
version = "0.1.0"
authors = ["Samuel Moelius <sam.moelius@trailofbits.com>"]
description = "lint for [0-signer-authorization](https://github.com/coral-xyz/sealevel-attacks/tree/master/programs/0-signer-authorization)"
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[[example]]
name = "insecure"
path = "ui/insecure/src/lib.rs"

[[example]]
name = "recommended"
path = "ui/recommended/src/lib.rs"

[[example]]
name = "secure"
path = "ui/secure/src/lib.rs"

[[example]]
name = "insecure-non-anchor"
path = "ui/insecure-non-anchor/src/lib.rs"

[[example]]
name = "secure-non-anchor"
path = "ui/secure-non-anchor/src/lib.rs"

[dependencies]
anchor-syn = "0.29.0"
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "ac4c2094a6030530661bee3876e0228ddfeb6b8b" }
dylint_linting = "2.6"
if_chain = "1.0"
solana-lints = { path = "../../crate" }

[dev-dependencies]
anchor-lang = "0.29"
dylint_testing = "2.6"
solana-program = "1.18.4"

[workspace]

[package.metadata.rust-analyzer]
rustc_private = true
