[package]
name = "missing_signer_check"
version = "0.1.0"
authors = ["Samuel Moelius <sam.moelius@trailofbits.com>"]
description = "lint for [0-signer-authorization](https://github.com/coral-xyz/sealevel-attacks/tree/master/programs/0-signer-authorization)"
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[[example]]
name = "insecure"
path = "ui/insecure/src/lib.rs"

[[example]]
name = "recommended"
path = "ui/recommended/src/lib.rs"

[[example]]
name = "secure"
path = "ui/secure/src/lib.rs"

[[example]]
name = "insecure-non-anchor"
path = "ui/insecure-non-anchor/src/lib.rs"

[[example]]
name = "secure-non-anchor"
path = "ui/secure-non-anchor/src/lib.rs"

[dependencies]
anchor-syn = "0.30.1"
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "19e305bb57a7595f2a8d81f521c0dd8bf854e739" }
dylint_linting = "3.4"
if_chain = "1.0"
solana-lints = { path = "../../crate" }

[dev-dependencies]
anchor-lang = "0.30"
dylint_testing = { version = "3.4", features = ["deny_warnings"] }
solana-program = "2.1.12"

[workspace]

[package.metadata.rust-analyzer]
rustc_private = true
