[package]
name = "sysvar_get"
version = "0.1.0"
authors = ["Trail of Bits"]
description = "Reports uses of `Sysvar::from_account_info` instead of `Sysvar::get`"
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[[example]]
name = "insecure"
path = "ui/insecure/src/lib.rs"

[[example]]
name = "secure"
path = "ui/secure/src/lib.rs"

[dependencies]
anchor-syn = "0.30.1"
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "0450db33a5d8587f7c1d4b6d233dac963605766b" }
dylint_linting = "3.4"
if_chain = "1.0"
solana-lints = { path = "../../crate" }
syn = { version = "2.0.98", features = ["parsing"] }

[dev-dependencies]
anchor-lang = "0.30"
anchor-spl = "0.30"
dylint_testing = { version = "3.4", features = ["deny_warnings"] }

[workspace]

[package.metadata.rust-analyzer]
rustc_private = true
