[package]
name = "type_cosplay"
version = "0.1.0"
authors = ["Victor Wei (victor.wei@trailofbits.com)"]
description = "lint for [3-type-cosplay](https://github.com/coral-xyz/sealevel-attacks/tree/master/programs/3-type-cosplay)"
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[[example]]
name = "insecure"
path = "ui/insecure/src/lib.rs"

[[example]]
name = "insecure-2"
path = "ui/insecure-2/src/lib.rs"

[[example]]
name = "insecure-3"
path = "ui/insecure-3/src/lib.rs"

[[example]]
name = "insecure-anchor"
path = "ui/insecure-anchor/src/lib.rs"

[[example]]
name = "recommended"
path = "ui/recommended/src/lib.rs"

[[example]]
name = "recommended-2"
path = "ui/recommended-2/src/lib.rs"

[[example]]
name = "secure"
path = "ui/secure/src/lib.rs"

[[example]]
name = "secure-2"
path = "ui/secure-2/src/lib.rs"

[dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "e43f5a17d4d9263616ae6fc28a7c5353e80d8a12" }
dylint_linting = "2.0.13"
if_chain = "1.0.2"
solana-lints = { path = "../../crate" }

[dev-dependencies]
anchor-lang = "0.25.0"
dylint_testing = "2.0.13"

[workspace]

[package.metadata.rust-analyzer]
rustc_private = true
