[package]
name = "type_cosplay"
version = "0.1.0"
authors = ["Victor Wei (victor.wei@trailofbits.com)"]
description = "lint for [3-type-cosplay](https://github.com/coral-xyz/sealevel-attacks/tree/master/programs/3-type-cosplay)"
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[[example]]
name = "insecure"
path = "ui/insecure/src/lib.rs"

[[example]]
name = "insecure-2"
path = "ui/insecure-2/src/lib.rs"

[[example]]
name = "insecure-3"
path = "ui/insecure-3/src/lib.rs"

[[example]]
name = "insecure-anchor"
path = "ui/insecure-anchor/src/lib.rs"

[[example]]
name = "recommended"
path = "ui/recommended/src/lib.rs"

[[example]]
name = "recommended-2"
path = "ui/recommended-2/src/lib.rs"

[[example]]
name = "secure"
path = "ui/secure/src/lib.rs"

[[example]]
name = "secure-2"
path = "ui/secure-2/src/lib.rs"

[dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "0450db33a5d8587f7c1d4b6d233dac963605766b" }
dylint_linting = "3.4"
if_chain = "1.0"
solana-lints = { path = "../../crate" }

[dev-dependencies]
anchor-lang = "0.30"
dylint_testing = { version = "3.4", features = ["deny_warnings"] }

[workspace]

[package.metadata.rust-analyzer]
rustc_private = true
