[package]
name = "duplicate-mutable-accounts-recommended"
version = "0.1.0"
description = "Contains all necessary constraints for more than 2 duplicate accounts"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "duplicate_mutable_accounts_recommended"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.24.2"
