[package]
name = "reinitialization-secure-recommended"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "reinitialization_secure_recommended"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[workspace]

[dependencies]
anchor-lang = "0.24.2"
