[package]
name = "signer-authorization-secure-non-anchor"
version = "0.1.0"
description = ""
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "signer_authorization_secure_non_anchor"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "1.18.4"

[workspace]
