[package]
name = "secure-get-secure"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "secure_get_secure"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"

[workspace]


# [workspace.metadata.dylint]
# libraries = [
#     { path = "../../../../../solana-lints-dev", pattern = "lints/*" },
#     # { git = "https://github.com/crytic/solana-lints", pattern = "lints/*" },
# ]
