[package]
name = "type-cosplay-insecure-two"
version = "0.1.0"
description = "Deserializing from multiple enum types"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "type_cosplay_insecure"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"

[workspace]
