[package]
name = "insecure-three"
version = "0.1.0"
description = "Deserializing from multiple different type-kinds, e.g., a struct and an enum"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "type_cosplay_insecure"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.24.2"
