[package]
name = "type-cosplay-insecure-anchor"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "type_cosplay_inecure_anchor"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[workspace]

[dependencies]
anchor-lang = "0.29.0"
