[package]
name = "type-cosplay-insecure"
version = "0.1.0"
description = "single deserialized type; is not enum; no discriminant"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "type_cosplay_insecure"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.24.2"
